--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <h1>[Rapid Adventures] Site Plan</h1>
             <h2>[Daberechi Levi Nwachukwu]</h2>
-            <h2>WDD 130-[section B3</h2>
+            <h2>WDD 130-[section B3]</h2>
             <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
         </header>
         <main>
