--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
+                <img class="logo" src="images/raftingsite.png" alt="Rapids Logo" />
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -19,11 +19,11 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" />
+                <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting" />
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar</h4>
+                <h4>Make Memories with Rapid adventures</h4>
                 <div class="button-box">
                     <a class="book" href="contactus.html">Book Now</a>
                 </div>
@@ -31,21 +31,21 @@
         </div>
         <main class="home-grid">
             <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
-                <img class="icon" src="images/river_icon.png" alt="river icon" />
+                <img class="card-img" src="images/river_in_forest.jpg" alt="river in forest" />
+                <img class="icon" src="images/rivericon.jpg" alt="river icon" />
                 <h2>Rivers</h2>
             </section>
             <section class="camping-card">
-                <img class="card-img" src="images/camping.jpg" alt="tent in mountains" />
-                <img class="icon" src="images/fire_icon.png" alt="fire icon" />
+                <img class="card-img" src="images/camping.jpeg" alt="tent in mountains" />
+                <img class="icon" src="images/camp fire.jpeg" alt="fire icon" />
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat" />
-                <img class="icon" src="images/oars.png" alt="oars icon" />
+                <img class="card-img" src="images/rafting_boat.jpg" alt="rafting boat" />
+                <img class="icon" src="images/oars.jpg" alt="oars icon" />
                 <h2>Rapids</h2>
             </section>
-            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" />
+            <img class="mountains" src="images/mountain.jpg" alt="Misty mountains" />
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
@@ -53,7 +53,7 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 20XX - Daberechi Levi Nwachukwu</p>
+            <p>Rapid Adevntures &copy; 2023 - Daberechi Levi Nwachukwu</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
