Added CSS styling to give a more appealng presentation to th page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Practice Tasks</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>Education</h1>
+        <p>Education is the difference between wishing you could help someone & being able to help them <br />------Prsident Nelson</p>
+        <ol>
+            <li>Faith in theLord Jesus Christ</li>
+            <li>Repentance</li>
+            <li>Baptism by immersion for the remission of sins</li>
+            <li>Laying on of hands for the gift if the Holy Ghost</li>
+        </ol>
+        <img src="./images/Nelson. P.jpeg" alt="An image of President Rusell Marion Nelos" />
+        <p id="quote">"Because of the Savior's Atonement, His gospel provides an invitation tokeep changing, growing, and becoming pure"</p>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dcat&psig=AOvVaw1aMTIn0q50qwg5XwWwyUON&ust=1696692866165000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCIjI4M7f4YEDFQAAAAAdAAAAABAE" alt="An image of a cat" />
+    </body>
+    <footer>
+        <p>Russell M. Nelson</p>
+        <p>President of the church of Jesus Christ Of Latter-Day Saints</p>
+    </footer>
 </html>
