--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,70 +3,74 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./styles/styles.css" />
         <title>Document</title>
     </head>
     <body>
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/raftingsite.png" alt="Rapids Logo" />
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav>
-        </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting" />
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Rapid adventures</h4>
-                <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+        <div id="content">
+            <header>
+                <a id="logo_link" href="index.html">
+                    <img class="logo" src="images/raftingsite.png" alt="Rapids Logo" style="width: 3%" />
+                </a>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="#">Page 2</a>
+                    <a href="site-plan-rafting.html">Site Plan</a>
+                    <a href="contactus.html">Contact Us</a>
+                </nav>
+            </header>
+            <div id="hero">
+                <div id="hero-box">
+                    <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting" />
                 </div>
-            </section>
-        </div>
-        <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="images/river_in_forest.jpg" alt="river in forest" />
-                <img class="icon" src="images/rivericon.jpg" alt="river icon" />
-                <h2>Rivers</h2>
-            </section>
-            <section class="camping-card">
-                <img class="card-img" src="images/camping.jpeg" alt="tent in mountains" />
-                <img class="icon" src="images/camp fire.jpeg" alt="fire icon" />
-                <h2>Camping</h2>
-            </section>
-            <section class="rapids-card">
-                <img class="card-img" src="images/rafting_boat.jpg" alt="rafting boat" />
-                <img class="icon" src="images/oars.jpg" alt="oars icon" />
-                <h2>Rapids</h2>
-            </section>
-            <img class="mountains" src="images/mountain.jpg" alt="Misty mountains" />
-            <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-                <a class="join" href="rivers.html">Join Us</a>
-            </section>
-        </main>
-        <footer>
-            <p>Rapid Adevntures &copy; 2023 - Daberechi Levi Nwachukwu</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
-            <div class="social">
-                <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="fb icon" />
-                </a>
-                <a href="https://twitter.com">
-                    <img src="images/twitter.png" alt="twitter icon" />
-                </a>
-                <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="instagram icon" />
-                </a>
+                <section id="hero-msg">
+                    <h1 class="home-title">Have An Adventure</h1>
+                    <h4>Make Memories with Rapid adventures</h4>
+                    <div class="button-box">
+                        <a class="book" href="contactus.html">Book Now</a>
+                    </div>
+                </section>
             </div>
-        </footer>
+            <main class="home-grid">
+                <section class="rivers-card">
+                    <img class="card-img" src="images/river_in_forest.jpg" alt="river in forest" />
+                    <img class="icon" src="images/rivericon.jpg" alt="river icon" />
+                    <h2>Rivers</h2>
+                </section>
+                <section class="camping-card">
+                    <img class="card-img" src="images/camping.jpeg" alt="tent in mountains" />
+                    <img class="icon" src="images/camp fire.jpeg" alt="fire icon" />
+                    <h2>Camping</h2>
+                </section>
+                <section class="rapids-card">
+                    <img class="card-img" src="images/rafting_boat.jpg" alt="rafting boat" />
+                    <img class="icon" src="images/oars.jpg" alt="oars icon" />
+                    <h2>Rapids</h2>
+                </section>
+                <div id="background"></div>
+                <img class="mountains" src="images/mountain.jpg" alt="Misty mountains" />
+                <section class="msg">
+                    <h2>More Than Just The Thrill</h2>
+                    <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+                    <a class="join" href="rivers.html">Join Us</a>
+                </section>
+            </main>
+            <footer>
+                <p>Rapid Adevntures &copy; 2023 - Daberechi Levi Nwachukwu</p>
+                <p><a href="site-plan-rafting.html">Site Plan</a></p>
+                <p><a href="contactus.html">Contact Us</a></p>
+                <div class="social">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="images/facebook.png" alt="fb icon" />
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="images/twitter.png" alt="twitter icon" />
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="images/instagram.png" alt="instagram icon" />
+                    </a>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
