--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,7 +39,7 @@
                 </section>
                 <section class="camping-card">
                     <img class="card-img" src="images/camping.jpeg" alt="tent in mountains" />
-                    <img class="icon" src="images/camp fire.jpeg" alt="fire icon" />
+                    <img class="icon" src="images/campfire.jpeg" alt="fire icon" />
                     <h2>Camping</h2>
                 </section>
                 <section class="rapids-card">
@@ -47,8 +47,8 @@
                     <img class="icon" src="images/oars.jpg" alt="oars icon" />
                     <h2>Rapids</h2>
                 </section>
-                <div id="background"></div>
-                <img class="mountains" src="images/mountain.jpg" alt="Misty mountains" />
+                <div id="background" style="margin-bottom: 75px"></div>
+                <img class="mountains" src="images/mountain.jpg" alt="Misty mountains" style="margin-top: 75px" />
                 <section class="msg">
                     <h2>More Than Just The Thrill</h2>
                     <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
