CSS Positioning task

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Practice Tasks</title>
         <link rel="stylesheet" href="./style.css" />
     </head>
-    <body>
-        <h1>Education</h1>
+    <!-- <body> -->
+    <!-- <h1>Education</h1>
         <p>Education is the difference between wishing you could help someone & being able to help them <br />------Prsident Nelson</p>
         <ol>
             <li>Faith in theLord Jesus Christ</li>
@@ -22,5 +22,16 @@
     <footer>
         <p>Russell M. Nelson</p>
         <p>President of the church of Jesus Christ Of Latter-Day Saints</p>
-    </footer>
+    </footer> -->
+
+    <div id="container">
+        <div class="first">
+            <h1>Tart &</h1>
+            <img src="./images/cherries.png" alt="An image of two cherries hanging from a leaf." style="width: 80px" />
+        </div>
+        <div class="second">
+            <h1>Sweet</h1>
+            <h3>Cherries</h3>
+        </div>
+    </div>
 </html>
